--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
-石家庄Linux用户组，原河北Linux用户组
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+		<title>资源首页</title>
+		<style type="text/css">
+			body {width: 100%;}
+			._header,._banner,._content,._footer{width: 100%;}
+			.header,.banner,.content,.footer{width: 1200px;margin: 0 auto;}
+			
+			._header{background: #222222;}
+			.header nav{border-width: 0;margin-bottom: 0;}
+
+			._banner{background: #6f5499;}
+			.banner .jumbotron{background: #6f5499;color: #ffffff;}
+
+			._footer{background: #222222;padding: 2em;}
+			.footer{color: #9d9d9d;text-align: center;}
+		</style>
+		<script type="text/javascript" src="./js/jquery-2.1.4.min.js"></script>
+		<script type="text/javascript" src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+		<script type="text/javascript">
+			$(function () {
+            });
+		</script>
+	</head>
+
+	<body>
+		<div class="_header">
+			<div class="header">
+				<nav class="navbar navbar-default navbar-inverse">
+					<div class="container-fluid">
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<div class="navbar-header">
+								<a class="navbar-brand" href="#">SJZLUG</a>
+							</div>
+							<ul class="nav navbar-nav">
+								<li>
+									<a href="#">线下活动</a>
+								</li>
+								<li>
+									<a href="#">LUG论坛</a>
+								</li>
+								<li>
+									<a href="#">知识粮库</a>
+								</li>
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li>
+									<a href="#">登录</a>
+								</li>
+								<li>
+									<a href="#">注册</a>
+								</li>
+								<li>
+									<a href="#">联系我们</a>
+								</li>
+							</ul>
+						</div>
+						<!-- /.navbar-collapse -->
+					</div>
+					<!-- /.container-fluid -->
+				</nav>
+			</div>
+		</div>
+		<div class="_banner">
+			<div class="banner">
+				<div class="jumbotron">
+					<h1>SJZLUG 石家庄Linux用户组</h1>
+					<h2 style="color: #cdbfe3">Shijiazhuang Linux User Group</h2>
+				</div>
+			</div>
+		</div>
+
+		<div class="_content">
+			<div class="content">
+				<!--这里是内容-->
+			</div>
+		</div>
+
+		<div class="_footer">
+			<div class="footer">
+				<p>石家庄Linux用户组 所有</p>
+				<p>清风 辉 百无一用是书生 红壶吃猬队 寒宇.改 janl</p>
+				<p>QQ群:249872047 <a href="https://tieba.baidu.com/f?kw=%E6%B2%B3%E5%8C%97linux%E7%94%A8%E6%88%B7%E7%BB%84&fr=index">群贴吧</a></p>
+			</div>
+		</div>
+	</body>
+
+</html>
