--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0.min.css" />
+<link rel="shortcut icon" href="favicon.ico">
 		<title>资源首页</title>
 		<style type="text/css">
 			body {width: 100%;}
@@ -47,6 +49,12 @@
 								</li>
 								<li>
 									<a href="#">知识粮库</a>
+								</li>
+								<li>
+									<a href="https://gitee.com/sjzlug/sjzlug.org" target="_blank" title="码云项目">码云</a>
+								</li>
+								<li>
+									<a href="https://github.com/sjzlug/sjzlug.org" target="_blank" title="Github项目"><i class="fa fa-github fa-lg"></i></a>
 								</li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
