--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link rel="shortcut icon" href="favicon.ico">
 		<title>资源首页</title>
 		<style type="text/css">
-			body {width: 100%;}
+			/*body {width: 100%;}
 			._header,._banner,._content,._footer{width: 100%;}
-			.header,.banner,.content,.footer{width: 1200px;margin: 0 auto;}
+			.header,.banner,.content,.footer{width: 1200px;margin: 0 auto;}*/
 			
 			._header{background: #222222;}
 			.header nav{border-width: 0;margin-bottom: 0;}
@@ -36,12 +36,18 @@
 				<nav class="navbar navbar-default navbar-inverse">
 					<div class="container-fluid">
 						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<div class="navbar-header">
-								<a class="navbar-brand" href="#">SJZLUG</a>
-							</div>
-							<ul class="nav navbar-nav">
-								<li>
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					            <span class="sr-only">Toggle navigation</span>
+					            <span class="icon-bar"></span>
+					            <span class="icon-bar"></span>
+					            <span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="#">SJZLUG</a>
+				        </div>
+				        <div id="navbar" class="collapse navbar-collapse">
+				        	<ul class="nav navbar-nav">
+					            <li>
 									<a href="#">线下活动</a>
 								</li>
 								<li>
@@ -56,19 +62,8 @@
 								<li>
 									<a href="https://github.com/sjzlug/sjzlug.org" target="_blank" title="Github项目"><i class="fa fa-github fa-lg"></i></a>
 								</li>
-							</ul>
-							<ul class="nav navbar-nav navbar-right">
-								<li>
-									<a href="#">登录</a>
-								</li>
-								<li>
-									<a href="#">注册</a>
-								</li>
-								<li>
-									<a href="#">联系我们</a>
-								</li>
-							</ul>
-						</div>
+				        	</ul>
+				        </div>
 						<!-- /.navbar-collapse -->
 					</div>
 					<!-- /.container-fluid -->
